--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Figtree, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
